--- a/MvcPruebaAuroraCochesAWS/Views/Coches/Create.cshtml
+++ b/MvcPruebaAuroraCochesAWS/Views/Coches/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IdCoche" class="control-label"></label>
@@ -33,9 +33,8 @@
                 <span asp-validation-for="Conductor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Imagen" class="control-label"></label>
-                <input asp-for="Imagen" class="form-control" />
-                <span asp-validation-for="Imagen" class="text-danger"></span>
+                <label>Imagen</label>
+                <input type="file" name="Imagen"/>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
